[package]
name = "simple_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
secp256k1 = { version = "0.28", features = ["rand", "serde"] }
rand = "0.8"
base64 = { version = "0.21", features = ["alloc"] }
hex = "0.4.3"
